Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 
     <footer>
         <p>© 2024 Y Apps - Trusted APK Store</p>
-        <p style="margin-top:8px; font-size:14px;"><i class="fas fa-phone"></i> 📞 Connect: 0618201594</p>
+        <p style="margin-top:8px; font-size:14px;"><i class="fas fa-phone"></i>Connect: 0618201594</p>
         <a href="https://www.facebook.com/share/17dWXWbZBu/" target="_blank" class="fb-icon"><i class="fab fa-facebook"></i></a>
     </footer>
 
@@ -115,4 +115,5 @@
 
 </body>
 </html>
+
 
