--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     <div class="container" id="home">
         <div class="app-card">
             <div class="apk-icon-circle">
-                <img src="https://raw.githubusercontent.com/daily-Y-App/Yar-Note/main/file_0000000082407207aace087bf76729ec.png" class="app-icon" alt="Daily Wage Icon">
+                <img src="https://i.postimg.cc/mrKY1fwZ/1024x1024.png" class="app-icon" alt="Daily Wage Icon">
             </div>
             <h2 class="title-app1">Daily Wage</h2>
             <p class="desc-app1" style="color:#666; font-size: 12px; margin: 10px 0;">နေ့စဉ်ဝင်ငွေထွက်ငွေ တွက်ချက်ရန်။</p>
@@ -79,7 +79,7 @@
 
         <div class="app-card">
             <div class="apk-icon-circle">
-                <img src="https://raw.githubusercontent.com/daily-Y-App/Apk-downlode/main/IMG_20260101_183909.png" class="app-icon" alt="App Icon">
+                <img src="https://i.postimg.cc/mrKY1fwZ/1024x1024.png" class="app-icon" alt="App Icon">
             </div>
             <h2 class="title-app2">မရနိုင်သေးပါ(Backup)</h2>
             <p class="desc-app2" style="color:#666; font-size: 12px; margin: 10px 0;">နောက်ထပ် APK အသစ်အတွက် နေရာ။</p>
@@ -164,3 +164,4 @@
     </script>
 </body>
 </html>
+
